--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,7 +13,7 @@
         <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
         
         <!-- Local logic for uploading, and interfacing with the API -->
-        <script src="script.js"></script>
+        <script src="./script.js"></script>
     </head>
 
     <!-- Header with links to other Paperback locations -->
