--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=convert.stormcloud.host">
-<link rel="canonical" href="http://convert.stormcloud.host">
+<!DOCTYPE HTML>                                                                
+<html lang="en">                                                                
+    <head>                                                                      
+        <meta charset="utf-8">
+        <meta http-equiv="refresh" content="0;url=http://convert.stormcloud.host" />      
+        <link rel="canonical" href="http://convert.stormcloud.host" />                    
+    </head>                                                                                                                                                                  
+    <body>                                                                      
+        <h1>                                                                    
+            The page been moved to <a href="http://convert.stormcloud.host">http://convert.stormcloud.host</a>
+        </h1>                                                                  
+    </body>                                                                    
+</html>
