--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">                                                                
     <head>                                                                      
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0;url=http://convert.stormcloud.host" />      
-        <link rel="canonical" href="http://convert.stormcloud.host" />                    
+        <meta http-equiv="refresh" content="0;url=convert.stormcloud.host" />      
+        <link rel="canonical" href="convert.stormcloud.host" />                    
     </head>                                                                                                                                                                  
     <body>                                                                      
         <h1>                                                                    
-            The page been moved to <a href="http://convert.stormcloud.host">http://convert.stormcloud.host</a>
+            The page been moved to <a href="convert.stormcloud.host">http://convert.stormcloud.host</a>
         </h1>                                                                  
     </body>                                                                    
 </html>
