--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE HTML>                                                                
-<html lang="en">                                                                
-    <head>                                                                      
-        <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0;url=convert.stormcloud.host" />      
-        <link rel="canonical" href="convert.stormcloud.host" />                    
-    </head>                                                                                                                                                                  
-    <body>                                                                      
-        <h1>                                                                    
-            The page been moved to <a href="convert.stormcloud.host">http://convert.stormcloud.host</a>
-        </h1>                                                                  
-    </body>                                                                    
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="7; url='http://convert.stormcloud.host'" />
+  </head>
+  <body>
+    <p>Please follow <a href="http://convert.stormcloud.host">this link</a>.</p>
+  </body>
 </html>
