Added new sources to user presentation view

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -67,7 +67,9 @@
                     <!-- Add sources which this backup tool can use to this list below -->
                     <div class="ui segment">
                         <div class="ui bulleted list">
-                            <div class="item">Manganelo</div> 
+                            <div class="item">Manganelo</div>
+                            <div class="item">Mangadex</div>
+                            <div class="item">MangaLife</div>
                         </div>
                     </div>
                 </div>
