Additional sources added

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -43,7 +43,7 @@
                         Provide a Tachiyomi .gz Backup
                     </h1>
                     <p>Recently Tachiyomi updated their backup formatting from .json to a .gz extension using Protocol Buffers. This tool will only work
-                        on the new version of backups.
+                        on the new version of backups. Legacy backups are unsupported.
                     </p>
                     <form class = "ui form" id="form" name="form">
                         <div class="ui input">
@@ -70,8 +70,12 @@
                             <div class="item">Manganelo</div>
                             <div class="item">Mangadex</div>
                             <div class="item">MangaLife</div>
+                            <div class="item">Mangasee</div>
+                            <div class="item">MangaReader</div>
+                            <div class="item">Guya</div>
                         </div>
                     </div>
+                    Additional source functionality will be added in the near future
                 </div>
             </div>
         </div>
