--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Tachiyomi to Paperback Converter</title>
 
         <!-- Jquery from CDN -->
-        <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
         <!-- Semantic-ui from CDN -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
