Remote endpoint supports HTTPS now

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <footer>
     <script>
 
-    const remoteEndpoint = "http://convert.stormcloud.host" // Where do we send these files for conversion?
+    const remoteEndpoint = "https://convert.stormcloud.host" // Where do we send these files for conversion?
 
     $(document).ready(function() {
         $("#fileUploadButton").change(function() {
